--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,16 @@ python-json-logger==2.0.7
 
 # 데이터 처리
 pandas==2.1.3
-openpyxl==3.1.2
+openpyxl>=3.1.0  # Pandas와 호환을 위해 3.1.0 이상 필요
+numpy==1.24.3
+scipy==1.11.4
+
+# 데이터베이스
+pymysql==1.1.0
+SQLAlchemy==2.0.23
+
+# 머신러닝 / AI
+scikit-learn==1.3.2
 
 # 개발 도구 (선택적)
 pytest==7.4.3
